maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:19: error: not enough arguments for method keepHandOnSideWall: (sommeAngle: Int)Int.
Unspecified value parameter sommeAngle.
	{keepHandOnSideWall()}
                           ^