maze.lessons.maze.pledge.PledgeMaze.scala.code
override def run() {
setDirection(Direction.NORTH)
while (getY()!=0)
	{if (!estFaceMur)
			{avance()}
		else {gauche()
			if (!estFaceMur)
					{avance()
					droite()}
				else {droite()
					droite()
					avance()
					gauche()}
			}
	}
droite()
while (!estSurBiscuit)
	{keepHandOnSideWall()}
prendBiscuit()
}

def keepHandOnSideWall(sommeAngle:Int) : Int = {
var sommeAngle2 = sommeAngle
gauche()
if (!estFaceMur)
		{sommeAngle2 += 1
		avance()
		return sommeAngle2}
	else {droite()
		if (!estFaceMur)
				{avance()
				return sommeAngle2}
			else {droite()
				if (!estFaceMur)
						{sommeAngle2 -= 1
						avance()
						return sommeAngle2}
					else {droite()
						avance()
						return sommeAngle2}
				}
		}
}

def isDirectionFree(dir:Direction) : Boolean = {
	val x = getDirection()
	setDirection(dir)
	if (!estFaceMur)
			{setDirection(x)
			return true}
		else	{setDirection(x)
			return false}
}
